--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 
-
+body {
+	padding: 20px;
+}
 div {
-	border: 1px solid black;
+	border: px solid black;
 	min-height: 200px;
 }
 
@@ -15,4 +17,10 @@ div {
 
 #inputsHere {
 	height: 200px;
+}
+
+.teams {
+	margin: 5px;
+	border-radius: 10px;
+	float: left;
 }
